Add Open Graph image meta tag
Added Open Graph image meta tag for sharing.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
+  <meta property="og:image" content="https://frala04.github.io/bebse/ogimg/sample.png">
   <meta property="og:title" content="MapleM 캐릭터 코드" />
   <meta property="og:description" content="미리보기 이미지" />
   <meta property="og:type" content="website" />
